# NurikabeSolver

./: CMakeLists.txt  CMakePresets.json
NurikabeSolver/: 0-podan-2.txt  10x10-1.txt  10x10-2-2.txt  10x10-2.txt  10x10-3.txt  10x10-4.txt  10x10-5.txt  10x18-1.txt  10x18-3.txt  10x18-4.txt  10x18-5.txt  10x18-7.txt  10x18-hard.txt  14x24-1.txt  14x24-2.txt  14x24-3.txt  16x30-1.txt  5x5-easy.txt  7x7-hard.txt  CMakeLists.txt  Main.cpp  Nurikabe.h  NurikabeBoard.cpp  NurikabeBoard.h  NurikabeRegion.cpp  NurikabeRegion.h  NurikabeRules.cpp  NurikabeRules.h  NurikabeSolver.cpp  NurikabeSolver.h  NurikabeSolverRules.cpp  NurikabeSquare.cpp  NurikabeSquare.h  Point.cpp  Point.h
